# auto-research-template

./: .gitignore  CLAUDE.md  Skills.md  pyproject.toml  readme.md  sweep.config.yaml  train.py
.claude/: settings.json
.claude/commands/: analyze.md  discuss.md  experiment.md  hypothesis.md  iterate.md  results.md  status.md  train.md  visualize.md
.claude/hooks/: on_write.sh
config/generative/: ddpm.yaml  drift.yaml  flow_matching.yaml  vae.yaml
config/lm/: default.yaml
config/representation/: byol.yaml  contrastive.yaml
research/: log.md
scripts/: orchestrator.py  plot_metrics.py  read_metrics.py  run_sweep.sh  semantic_scholar.py  setup_env.sh
src/callbacks/: obsidian_callback.py  slack_callback.py
src/modules/: __init__.py  convnext.py  dit.py  ema.py  lm.py  losses.py  noise_scheduler.py  quantizer.py  transformers.py
src/trainers/: __init__.py  base_trainer.py
src/trainers/generative/: __init__.py  diffusion.py  drift.py  flow_matching.py
src/trainers/lm/: __init__.py  post_train.py  pretrain.py  rl.py  sft.py
src/trainers/representation/: __init__.py  infonce.py  jepa.py
src/trainers/vae/: __init__.py  vae.py  vqvae.py
src/utils/: config_utils.py  scheduler.py
