[project]
name = "auto-research-template"
version = "0.1.0"
description = "PyTorch Lightning research template — multimodal LLM, diffusion, and generative modeling"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "lightning>=2.4.0",
    "einops>=0.8.0",
    "numpy>=1.26.0",
    # LLM / multimodal
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "accelerate>=0.34.0",
    # Diffusion
    "diffusers>=0.30.0",
    # Config
    "omegaconf>=2.3.0",
    # Logging
    "tensorboard>=2.14.0",
    # Integrations
    "requests>=2.32.0",
    "anthropic>=0.34.0",
    # Utilities
    "pillow>=10.4.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:BuildBackend"
